layout issue on mac

--- a/client/src/component/chatroom/styles.styl
+++ b/client/src/component/chatroom/styles.styl
@@ -247,6 +247,9 @@
 .header
   width: 100%
   height 147px
+  @media(max-height  1000px){
+    height 19%
+  }
 
 
 
@@ -255,6 +258,9 @@
   overflow: auto
   height: 640px
   padding: 0
+  @media(max-height  1000px){
+    height 19%
+  }
   .scrollWrapper:first-child
     margin-top 0px !important 
   &__chatContact
